add profometer and updated open po

--- a/index.html
+++ b/index.html
@@ -154,28 +154,29 @@
                 </div>
             </div>
         </section>
-        <section id="projects_openpo">
+        <section id="projects_profometer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
-                            <a class="project-img-depth" href="static/pages/openpo.html">
-                                <img src="static/img/openpo/cover_1.png" alt="yellow bg">
-                                <img src="static/img/openpo/cover_2.png" alt="product image">
+                            <a class="project-img-depth" target="_blank"
+                                href="static/img/profometer/Profometer UI Design Yichang.pdf">
+                                <img src="static/img/profometer/cover_1.png" alt="bg">
+                                <img src="static/img/profometer/cover_2.png" alt="product image">
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <small>Released Project</small>
-                        <h3 class="m-0rem-t m-1rem-b">OpenPO</h3>
-                        <span class="badge openpo-bg">User Research</span>
-                        <span class="badge openpo-bg">Mobile Design</span>
-                        <span class="badge openpo-bg">Market Validation</span>
-                        <p class="m-1rem-t">OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to
-                            manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for
-                            conducting user research, identifying problems, proposing solutions, and validating
-                            solutions. OpenPO is going to be released on 24th Jul 2020.</p>
-                        <a class="read-more-link openpo-color" href="static/pages/openpo.html">
+                        <h3 class="m-0rem-t m-1rem-b">Profometer</h3>
+                        <span class="badge zalora-bg text-white">UI Design</span>
+                        <span class="badge zalora-bg text-white">IoT</span>
+                        <span class="badge zalora-bg text-white">iPad App</span>
+                        <p class="m-1rem-t">Design of the app for rebar locating, concrete cover measurement and rebar
+                            diameter assessment. Users are able to view the measurement data and control the device via
+                            the iPad app designed.</p>
+                        <a class="read-more-link zalora-color" target="_blank"
+                            href="static/img/profometer/Profometer UI Design Yichang.pdf">
                             Read More
                             <svg class="icon">
                                 <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
@@ -213,26 +214,28 @@
                 </div>
             </div>
         </section>
-        <section id="projects_zalora">
+        <section id="projects_openpo">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
-                            <a class="project-img-depth" href="static/pages/zalora.html">
-                                <img src="static/img/zalora/cover_1.png" alt="bg">
-                                <img src="static/img/zalora/cover_2.png" alt="product image">
+                            <a class="project-img-depth" href="static/pages/openpo.html">
+                                <img src="static/img/openpo/cover_1.png" alt="yellow bg">
+                                <img src="static/img/openpo/cover_2.png" alt="product image">
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 ">
-                        <small>Released Design System</small>
-                        <h3 class="m-0rem-t m-1rem-b">Style</h3>
-                        <span class="badge zalora-bg white-color">UX Patterns</span>
-                        <span class="badge zalora-bg white-color">ReactJs</span>
-                        <span class="badge zalora-bg white-color">CSS</span>
-                        <p class="m-1rem-t">Style is a design system that defines the interaction standards, design
-                            patterns, and guidelines for all digital channels in ZALORA.</p>
-                        <a class="read-more-link zalora-color" href="static/pages/zalora.html">
+                    <div class="col-lg-6">
+                        <small>Released Project</small>
+                        <h3 class="m-0rem-t m-1rem-b">OpenPO</h3>
+                        <span class="badge openpo-bg">User Research</span>
+                        <span class="badge openpo-bg">Mobile Design</span>
+                        <span class="badge openpo-bg">Market Validation</span>
+                        <p class="m-1rem-t">OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to
+                            manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for
+                            conducting user research, identifying problems, proposing solutions, and validating
+                            solutions. OpenPO is going to be released on 24th Jul 2020.</p>
+                        <a class="read-more-link openpo-color" href="static/pages/openpo.html">
                             Read More
                             <svg class="icon">
                                 <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
