--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -92,7 +92,7 @@
             </div>
         </section>
         <div class="row m-3rem-t">
-            <div class="col-lg-6 offset-lg-3">
+            <div class="col-lg-8 offset-lg-2">
                 <img src="../img/openpo/openpo_process.png" alt="openpo project process">
             </div>
         </div>
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <div class="row m-6rem-t">
-                    <img src="../img/openpo/openop_ui.png" alt="openpo customer and seller's views">
+                    <img src="../img/openpo/openpo_ui.png" alt="openpo customer and seller's views">
                 </div>
 
             </div>
