--- a/static/pages/workspace.html
+++ b/static/pages/workspace.html
@@ -76,14 +76,12 @@
                     <div class="row m-1rem-b m-3rem-t">
                         <div class="col-lg-6">
                             <h6>Duration</h6>
-                            <div>3month</div>
+                            <div>3 months</div>
                             <h6 class="m-1.5rem-t">Role</h6>
                             <div>UX Designer/Product Owner</div>
                             <h6 class="m-1.5rem-t">Deliverables</h6>
                             <div>Strategy, user research report, persona, Hi-fi prototype, ux metrics, design system,
                                 prototype.</div>
-                        </div>
-                        <div class="col-lg-6">
                             <h6>Challenge</h6>
                             <div>
                                 Discover pain points of the current cloud storage platform and redesign the UI/UX to
@@ -424,6 +422,12 @@
                 </div>
                 <div class="row">
                     <div class="col">
+                        <h5>Data View (Logbook)</h5>
+                        <img src="../img/workspace/logbook.png" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
                         <h5>Data View (Sharing)</h5>
                         <img src="../img/workspace/share.png" />
                     </div>
@@ -514,6 +518,16 @@
         </section>
         <section id="workspace_result" class="hideme">
             <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h5>Result</h5>
+                        <p>After 1 mon</p>
+
+                    </div>
+                    <div class="col-lg-8">
+                        <img src="../img/workspace/result.png" />
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col">
                         <h5>After Thoughts</h5>
